Changelog v5.2.35 (2025-07-20):
- Updated embed extractor
- Fail gracefully when no sources are found

Changelog v5.2.34 (2025-07-16):
- Small fix with SmartPlay

Changelog v5.2.33 (2025-07-15):
- Added New Playback Option called SmartPlay
- Watchlist will now automatically update after auth
- Fixed Color bug with Anichart
- Fixed Paging for every menu that fixed the formats
- Fixed small String bugs

Changelog v5.2.32 (2025-07-09):
- Added Playback Context Menu in Playlist

Changelog v5.2.31 (2025-07-05):
- Fixed TorBox Links

Changelog v5.2.30 (2025-07-05):
- Added Tb Theme Support

Changelog v5.2.29 (2025-07-03):
- Added Subtitle Type Settings

Changelog v5.2.28 (2025-06-27):
- Updated embed extractor

Changelog v5.2.27 (2025-06-26):
- Added content-type if not present in response headers

Changelog v5.2.26 (2025-06-26):
- Fix MAL token refresh

Changelog v5.2.25 (2025-06-22):
- Updated embed extractor again

Changelog v5.2.24 (2025-06-18):
- Updated embed extractor

Changelog v5.2.23 (2025-06-11):
- Fixed Animixplay

Changelog v5.2.22 (2025-06-05):
- Fixed Marked as Watched Context for all Animes

Changelog v5.2.21 (2025-05-25):
- Fixed annoying bug with playing next
- Huge Thanks to Joezito129 for finding annoying bug

Changelog v5.2.20 (2025-05-19):
- Decided to make Source Select Easier for Uncached
- User will now see All Sources on Source Select
- Added View Cached, Uncached, Embeds, Both to Source Select

Changelog v5.2.19 (2025-05-17):
- Removed Difflib and Fuzzy Matching

Changelog v5.2.18 (2025-05-13):
- Added Trailers to Anilist Watchlist

Changelog v5.2.17 (2025-05-12):
- Small Bug fix in Watchlist Manager
- Playing Next Dialog button will seek to the end instead

Changelog v5.2.16 (2025-05-11):
- Fixed Playback bugs with Local Files

Changelog v5.2.15 (2025-05-11):
- Improved Last Played Matching
- Playing Next Episode will be alot faster
- Fixed Aniwave Playback

Changelog v5.2.14 (2025-05-09):
- Fix Weird Black Screen Bug when playing next episode